@@ -18,11 +18,15 @@
 > - 助教有給讓使用者自行新增插圖的建議 >>【 使用者新增 】(在jar檔中此功能會失效)<br/>
 > - 原先是用txt的方式儲存，後來更新為SQLite資料庫 >> 【 資料庫連結 】<br/>
 - - -
+### ◤ 操作方式
+#### 1 ) 請先下至 (https://gluonhq.com/products/javafx/)下載Javafx SDK
+#### 2 ) 在cmd輸入(java --module-path "Javafx SDK的lib路徑" --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web -jar 第21組_讀生友伴_Java2024.jar)
+- - -
 ### ◤ 相關資料
 
 ####  1 ) [期中提案](https://www.canva.com/design/DAGCfSAW4pQ/xMY6-8v5E4iNK_BbMBxBMw/view?utm_content=DAGCfSAW4pQ&utm_campaign=designshare&utm_medium=link&utm_source=editor)
 ####  2 ) [期末報告](https://www.canva.com/design/DAGGpcc_enM/xPmbXI4GoXoNIz0eK5WsXQ/view?utm_content=DAGGpcc_enM&utm_campaign=designshare&utm_medium=link&utm_source=editor)
-####  3 ) [ 執行檔 ](https://www.youtube.com/watch?v=yH9X6jIbIZI)
+####  3 ) [ 執行檔 ]([https://www.youtube.com/watch?v=yH9X6jIbIZI](https://drive.google.com/file/d/1dDCOhOlTukWETxnlVyx-e635bNI6ZJie/view?usp=sharing))
 ####  4 ) [ DEMO 影片 ](https://www.youtube.com/watch?v=yH9X6jIbIZI)
 
 - - -
